samples/_failures_safe/1761159437_1347a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3e59d58.c: In function ‘main’:
./samples/SAFE/__tmp_f3e59d58.c:141:12: error: missing terminating " character
  141 |     printf("\nFiltered logs for %s:\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f3e59d58.c:141:5: error: expected expression at end of input
  141 |     printf("\nFiltered logs for %s:\n
      |     ^~~~~~
./samples/SAFE/__tmp_f3e59d58.c:141:5: error: expected declaration or statement at end of input
